--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ No obligation. Just strategic clarity.
     </p>
     <div class="cta-buttons">
       <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">
-        Book a 30-Min Strategy Call
+        Schedule a Strategic Consultation
       </a>
     <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-secondary">
       Book Your Free HR Health Check
