--- a/index.html
+++ b/index.html
@@ -416,9 +416,31 @@ Environmental stressors directly influence cognitive clarity and executive funct
     </div>
 
 </section>
+
+          <!-- Founders Section OLD -->
+<section id="about" class="page-header">
+  <h1>The Leadership Behind Lakeside</h1>
+  <p>A unique partnership combining enterprise systems thinking, clinical psychology, and strategic HR leadership.</p>
+</section>
+
+<section class="founders">
+  <div class="founder">
+    <img src="assets/images/Rohit.png" alt="Rohit Nalwade" class="founder-img" />
+    <h2>Rohit Nalwade</h2>
+    <h3>Founder | Systems Architect & Psychologist</h3>
+    <p>Rohit bridges enterprise-grade systems engineering with clinical rigor. With over 20 years of experience in technology transformation and applied psychology, he designs scalable human capital frameworks that align operational performance with cognitive resilience.</p>
+  </div>
+  <div class="founder">
+    <img src="assets/images/Sweety.png" alt="Sweety Vasani" class="founder-img" />
+    <h2>Sweety Vasani</h2>
+    <h3>Co-Founder | HR Strategist & Psychometric Assessor</h3>
+    <p>Sweety brings deep expertise in strategic HR leadership and behavioral diagnostics. A certified psychometric assessor and seasoned HR practitioner, she translates workforce data into actionable people strategies — ensuring employee wellbeing and organizational performance move in tandem.</p>
+  </div>
+</section>
+
   
   
-    <!-- Founders Section -->
+    <!-- Founders Section NEW-->
 
  <section id="about" class="founders-section">
   <div class="container">
