--- a/index.html
+++ b/index.html
@@ -417,6 +417,31 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
 </section>
 
+    <!-- Founders Section OLD-->
+
+      <!-- Founders Section -->
+<section id="about" class="page-header">
+  <h1>The Leadership Behind Lakeside</h1>
+  <p>A unique partnership combining enterprise systems thinking, clinical psychology, and strategic HR leadership.</p>
+   <span class="founder-additionalpara ">Together, they bring a rare blend of systems engineering and clinical science to the design of high-performance organizations.</span>
+</section>
+
+<section class="founders">
+  <div class="founder">
+    <img src="assets/Rohit Pic - without background.png" alt="Rohit Nalwade" class="founder-img" />
+    <h2>Rohit Nalwade</h2>
+    <h3>Founder | Systems Architect & Psychologist</h3>
+    <p>Rohit bridges enterprise-grade systems engineering with clinical rigor. With over 20 years of experience in technology transformation and applied psychology, he designs scalable human capital frameworks that align operational performance with cognitive resilience.</p>
+  </div>
+  <div class="founder">
+    <img src="assets/Sweety Pic - 3.png" alt="Sweety Vasani" class="founder-img" />
+    <h2>Sweety Vasani</h2>
+    <h3>Co-Founder | HR Strategist & Psychometric Assessor</h3>
+    <p>Sweety brings deep expertise in strategic HR leadership and behavioral diagnostics. A certified psychometric assessor and seasoned HR practitioner, she translates workforce data into actionable people strategies — ensuring employee wellbeing and organizational performance move in tandem.</p>
+  </div>
+</section>
+
+      
         
   
     <!-- Founders Section NEW-->
