--- a/index.html
+++ b/index.html
@@ -430,13 +430,13 @@ Environmental stressors directly influence cognitive clarity and executive funct
   <div class="founder">
     <img src="assets/Rohit Pic - without background.png" alt="Rohit Nalwade" class="founder-img" />
     <h2>Rohit Nalwade</h2>
-    <h3>Founder | Systems Architect & Psychologist</h3>
+    <h3>Founder | Systems Architect & <br> Psychologist</h3>
     <p>Rohit bridges enterprise-grade systems engineering with clinical rigor. With over 20 years of experience in technology transformation and applied psychology, he designs scalable human capital frameworks that align operational performance with cognitive resilience.</p>
   </div>
   <div class="founder">
     <img src="assets/Sweety Pic - 3.png" alt="Sweety Vasani" class="founder-img" />
     <h2>Sweety Vasani</h2>
-    <h3>Co-Founder | HR Strategist & Psychometric Assessor</h3>
+    <h3>Co-Founder | HR Strategist & <br> Psychometric Assessor</h3>
     <p>Sweety brings deep expertise in strategic HR leadership and behavioral diagnostics. A certified psychometric assessor and seasoned HR practitioner, she translates workforce data into actionable people strategies — ensuring employee wellbeing and organizational performance move in tandem.</p>
   </div>
 </section>
