--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
     <img src="assets/Rohit Pic - without background.png" alt="Rohit Nalwade" class="founder-img" />
     <h2>Rohit Nalwade</h2>
     <h3>Founder | Systems Architect & <br> Psychologist</h3>
-    <p>Rohit bridges enterprise-grade systems engineering with clinical rigor. With over 20 years of experience in technology transformation and applied psychology, he designs scalable human capital frameworks that align operational performance with cognitive resilience.</p>
+    <p>Rohit bridges enterprise-grade systems engineering with clinical rigor. With over 20 years of experience in technology transformation and applied psychology, he designs scalable human capital frameworks that align operational performance with cognitive resilience and long-term institutional stability.</p>
   </div>
   <div class="founder">
     <img src="assets/Sweety Pic - 3.png" alt="Sweety Vasani" class="founder-img" />
