--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@ Environmental stressors directly influence cognitive clarity and executive funct
 <section class="growth-dilemma">
   <div class="container">
      <h2 class="section-title">The Growth Dilemma for Scaling Organizations</h2>
-    <p class="section-subtitle">As organizations scale, challenges shift from operational tasks to systemic infrastructure demands. Growth no longer strains effort — it strains structure. <strong>Is your foundation ready?</strong></p>
+    <p class="section-subtitle">As organizations scale, challenges shift from operational tasks to systemic infrastructure demands. Growth no longer strains effort — it strains structure. <strong>
+      <br>Is your foundation ready?</strong></p>
 
     <div class="growth-cards">
       <div class="card">
